# redshift_mcp_server

./: AWS_DEPLOYMENT.md  DESIGN.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  redis_mcp_server.py  redshift_mcp_server.py  seed_data.py  seed_redshift.py  test_local.py  test_redshift_local.py
